--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,29 @@
-name: Sequential Workflow
+name: Parallel Workflow
 
 on: [push]
 
 jobs:
-  build:
+  build-debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Clear NuGet cache
+        run: rm -rf ~/.nuget/packages/
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore Input/Input.csproj
+
+      - name: Build Debug
+        run: dotnet build Input/Input.csproj --configuration Debug
+
+  build-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,14 +35,17 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Input/Input.csproj
 
-      - name: Build project
+      - name: Build Release
         run: dotnet build Input/Input.csproj --configuration Release
 
   test:
-    needs: build
+    needs: [build-debug, build-release]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,7 +56,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore Tests/Tests.csproj
 
       - name: Run tests
-        run: dotnet test Tests/Tests.csproj --configuration Release
+        run: dotnet test Tests/Tests.csproj --configuration ${{ matrix.configuration }}
