--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/ceckout@v4
+        uses: actions/checkout@v4
       - name: Run code analysis
         run: dotnet tool install -g dotnet-format && dotnet format Tests/Tests.csproj
