--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,71 +1,47 @@
-name: Parallel Workflow
+name: Sequential Workflow с матричной стратегией
 
 on: [push]
 
 jobs:
-  build-debug:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Clear NuGet cache
-        run: rm -rf ~/.nuget/packages/
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore Input/Input.csproj
-
-      - name: Build Debug
-        run: dotnet build Input/Input.csproj --configuration Debug
-
-  build-release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore Input/Input.csproj
-
-      - name: Build Release
-        run: dotnet build Input/Input.csproj --configuration Release
-
-  test:
-    needs: [build-debug, build-release]
+  # Задача сборки проекта
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        configuration: [Debug, Release]
+        config: [Debug, Release]  # Матричная стратегия для разных конфигураций (Debug и Release)
     steps:
-      - name: Checkout code
+      - name: Клонирование репозитория
         uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: Настройка .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore Tests/Tests.csproj
+      - name: Восстановление зависимостей
+        run: dotnet restore
 
-      - name: Run tests
-        run: dotnet test Tests/Tests.csproj --configuration ${{ matrix.configuration }}
+      - name: Сборка проекта
+        run: dotnet build Input/Input.csproj --configuration ${{ matrix.config }}  # Используем переменную из матрицы
 
-  analyze:
-    needs: [build-debug, build-release]
+  # Задача тестирования
+  test:
+    needs: build  # Ожидаем завершения всех задач сборки
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config: [Debug, Release]  # Матричная стратегия для разных конфигураций
     steps:
-      - name: Checkout code
+      - name: Клонирование репозитория
         uses: actions/checkout@v4
-      - name: Run code analysis
-        run: dotnet tool install -g dotnet-format && dotnet format Tests/Tests.csproj
+
+      - name: Настройка .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Восстановление зависимостей
+        run: dotnet restore
+
+      - name: Запуск тестов
+        run: dotnet test Tests/Tests.csproj --configuration ${{ matrix.config }}
