--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,77 @@
-name: Sequential Workflow с артефактами
+name: Conditional Parallel Workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main       # Запускается в ветке main
+      - develop    # Запускается в ветке develop
 
 jobs:
-  # Задача сборки проекта
-  build:
+  build-debug:
     runs-on: ubuntu-latest
     steps:
-      - name: Клонирование репозитория
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Настройка .NET SDK
+      - name: Clear NuGet cache
+        run: rm -rf ~/.nuget/packages/
+
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Восстановление зависимостей
-        run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore Input/Input.csproj
 
-      - name: Сборка проекта
+      - name: Build Debug
+        run: dotnet build Input/Input.csproj --configuration Debug
+
+  build-release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore Input/Input.csproj
+
+      - name: Build Release
         run: dotnet build Input/Input.csproj --configuration Release
 
-      - name: Загрузка артефактов
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-output  # Имя артефакта
-          path: Input/bin/Release/  # Путь к файлам, которые нужно загрузить
-
-  # Задача тестирования
   test:
-    needs: build  # Ожидаем завершения задачи build
+    needs: [build-debug, build-release]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
     steps:
-      - name: Клонирование репозитория
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Скачивание артефактов
-        uses: actions/download-artifact@v4
-        with:
-          name: build-output  # Скачиваем артефакт, созданный в задаче build
-
-      - name: Настройка .NET SDK
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Восстановление зависимостей
-        run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore Tests/Tests.csproj
 
-      - name: Запуск тестов
-        run: dotnet test Tests/Tests.csproj --configuration Release
+      - name: Run tests
+        run: dotnet test Tests/Tests.csproj --configuration ${{ matrix.configuration }}
+
+  analyze:
+    if: github.ref == 'refs/heads/main'  # Выполняется только в ветке main
+    needs: [build-debug, build-release]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run code analysis
+        run: dotnet tool install -g dotnet-format && dotnet format Tests/Tests.csproj
