--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,46 @@
-name: Create Release and Upload Artifact
+name: Upload Release Asset
 
 on:
   push:
+    # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*' # Триггерится при создании тегов вида v1.0.0
+      - 'release'  # Триггер срабатывает только при пуше тега "release"
 
 jobs:
-  create-release:
+  build:
+    name: Upload Release Asset
     runs-on: ubuntu-latest
 
     steps:
+      # Клонирование кода из репозитория
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Create zip archive
+      # Создание ZIP-архива из папки Input/bin/Release
+      - name: Create ZIP archive
         run: |
-          zip --junk-paths my-artifact README.md
+          zip -r release-artifact.zip Input/bin/Release/
 
+      # Создание релиза на GitHub
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          tag_name: ${{ github.ref_name }}  # Используем имя тега (например, "release")
+          release_name: Release ${{ github.ref_name }}  # Название релиза
+          draft: false  # Релиз не является черновиком
+          prerelease: false  # Релиз не является предварительным
 
-      - name: Upload artifact to release
+      # Загрузка ZIP-архива как артефакта релиза
+      - name: Upload Release Asset
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # Получаем URL для загрузки из предыдущего шага
-          asset_path: ./artifact.zip # Путь к файлу, который нужно загрузить
-          asset_name: artifact.zip # Имя файла после загрузки
-          asset_content_type: application/zip # Тип содержимого файла
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL для загрузки артефактов
+          asset_path: ./release-artifact.zip  # Путь к созданному ZIP-файлу
+          asset_name: release-artifact.zip  # Имя файла артефакта
+          asset_content_type: application/zip  # Тип содержимого (ZIP)
