--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: Upload Release Asset
 
 on:
   push:
-    # Триггер срабатывает для тегов вида "release-*"
     tags:
       - 'release-*'
 
@@ -12,49 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Клонирование кода из репозитория
       - name: Checkout code
         uses: actions/checkout@v4
 
-              # Настройка .NET SDK
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'  # Укажи версию .NET, которую использует твой проект
+          dotnet-version: '8.0.x'  
 
-    # Восстановление зависимостей
       - name: Restore dependencies
         run: dotnet restore Input/Input.csproj
 
-    # Сборка проекта в конфигурации Release
       - name: Build project
         run: dotnet build Input/Input.csproj --configuration Release
 
-      # Создание ZIP-архива из папки Input/bin/Release
       - name: Create ZIP archive
         run: |
           zip -r release-artifact.zip Input/bin/Release/
 
-      # Создание релиза на GitHub
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}  # Используем имя тега (например, "release-1.0.0")
-          release_name: Release ${{ github.ref_name }}  # Название релиза
-          draft: false  # Релиз не является черновиком
-          prerelease: false  # Релиз не является предварительным
+          tag_name: ${{ github.ref_name }}  
+          release_name: Release ${{ github.ref_name }}  
+          draft: false  
+          prerelease: false  
 
-      # Загрузка ZIP-архива как артефакта релиза
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL для загрузки артефактов
-          asset_path: ./release-artifact.zip  # Путь к созданному ZIP-файлу
-          asset_name: release-artifact.zip  # Имя файла артефакта
-          asset_content_type: application/zip  # Тип содержимого (ZIP)
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  
+          asset_path: ./release-artifact.zip  
+          asset_name: release-artifact.zip 
+          asset_content_type: application/zip  
